--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,15 +1,14 @@
 {
   "name": "fed-cli",
   "description": "🚀 打造前端超级脚手架集",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/main.js",
   "type": "commonjs",
   "bin": {
     "fed": "dist/main.js"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [
     "vite",
