--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-  "name": "fed-cli",
-  "version": "1.0.0",
+  "name": "sfed-cli",
+  "version": "1.0.3",
   "description": "🚀 打造前端超级脚手架集",
   "keywords": [
-    "vite", "react", "vue", "vue3", "cli"
+    "vite",
+    "react",
+    "vue",
+    "vue3",
+    "cli",
+    "taro"
   ],
-  "scripts": {
-    "build": "pnpm -F fed-cli build",
-    "publish:cli": "pnpm -F fed-cli publish --no-git-check"
+  "main": "dist/main.js",
+  "bin": {
+    "sfed": "dist/main.js"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "commander": "^12.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tcly861204/front-end-cli.git"
+  },
   "author": {
     "name": "tcly861204",
     "email": "tcly861204@hotmail.com",
     "url": "https://github.com/tcly861204"
   },
-  "license": "ISC"
+  "license": "MIT"
 }
